--- a/index.html
+++ b/index.html
@@ -24,6 +24,50 @@
                 <label id="email-label" for="email">Email</label>
                 <input type="email" name="email" id="email" class="form-control" placeholder="Enter your Email" required />
             </div>
+            <div class="form-group">
+                <label id="number-label" for="number">Age<span class="clue">(optional)</span>
+                </label>
+                <input type="number" name="age" id="number" min="10" max="99" class="form-control" placeholder="Age" />
+            </div>
+            <div class="form-group">
+                <p>Which option best describes your current role?</p>
+                <select id="dropdown" name="role" class="form-control" required>
+                    <option disabled selected value>Select current role</option>
+                    <option value="student">Student</option>
+                    <option value="job">Full Time Job</option>
+                    <option value="learner">Full Time Learner</option>
+                    <option value="preferNo">Prefer not to say</option>
+                    <option value="other">Other</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <p>Would you recommend freeCodeCamp to a friend?</p>
+                <label>
+                    <input
+                    name="user-recommend"
+                    value="definitely"
+                    type="radio"
+                    class="input-radio"
+                    checked
+                    />Definitely
+                </label>
+                <label>
+                    <input
+                    name="user-recommend"
+                    value="maybe"
+                    type="radio"
+                    class="input-radio"
+                    /> Maybe
+                </label>
+                <label>
+                    <input
+                    name="user-recommend"
+                    value="not-sure"
+                    type="radio"
+                    class="input-radio"
+                    /> Not sure
+                </label>
+            </div>
         </form>
     </div>
     <p id="description"></p>
